Fixing align-center

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,9 +1,3 @@
-.container {
-	max-width: 980px;
-	text-align: center;
-	margin: 20px auto;
-}
-
 h1 {
 	margin-bottom: 20px;
 }
